; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/extr_mac80211_hwsim.c_hwsim_set_magic.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/extr_mac80211_hwsim.c_hwsim_set_magic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_vif = type { i64 }
%struct.hwsim_vif_priv = type { i32 }

@HWSIM_VIF_MAGIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211_vif*)* @hwsim_set_magic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hwsim_set_magic(%struct.ieee80211_vif* %0) #0 {
  %2 = alloca %struct.ieee80211_vif*, align 8
  %3 = alloca %struct.hwsim_vif_priv*, align 8
  store %struct.ieee80211_vif* %0, %struct.ieee80211_vif** %2, align 8
  %4 = load %struct.ieee80211_vif*, %struct.ieee80211_vif** %2, align 8
  %5 = getelementptr inbounds %struct.ieee80211_vif, %struct.ieee80211_vif* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to i8*
  %8 = bitcast i8* %7 to %struct.hwsim_vif_priv*
  store %struct.hwsim_vif_priv* %8, %struct.hwsim_vif_priv** %3, align 8
  %9 = load i32, i32* @HWSIM_VIF_MAGIC, align 4
  %10 = load %struct.hwsim_vif_priv*, %struct.hwsim_vif_priv** %3, align 8
  %11 = getelementptr inbounds %struct.hwsim_vif_priv, %struct.hwsim_vif_priv* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
